--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     </header>
 
     <h1>Buongiorno booleaners!</h1>
+
+    <footer>
+        Questo è il footer
+    </footer>
 </body>
 
 </html>
