--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        Questo è l'header
+        Questo è l'header di Loris
     </header>
 
     <h1>Buongiorno booleaners!</h1>
